# YoloRouter

./: .gitignore  00-START-HERE.md  AGENTS.md  ANALYZER.md  CHANGELOG.md  CI_CD_GUIDE.md  CI_CD_SUMMARY.txt  CLAUDE.md  CLAUDE_CODE_COMPLETE_GUIDE.md  CLAUDE_CODE_FIX_SUMMARY.md  CLAUDE_CODE_SETUP.md  CODE_REVIEW.md  Cargo.toml  DELIVERY_CHECKLIST.md  FIXES_SUMMARY.md  GIT_COMMIT_REFERENCE.md  INSTALL.md  INSTALLATION.md  PROJECT_SUMMARY.md  QUICK_INSTALL.txt  QUICK_START.md  README.md  README_cn.md  RELEASE.md  RELEASE_GUIDE.md  STREAMING_IMPLEMENTATION.md  STREAMING_SUPPORT.md  USER_GUIDE.md  config.example.toml  config.toml  diagnostic.sh  install.sh  test_auth_model.sh  test_streaming.sh  uninstall.sh  yolo-setup.sh
.github/: copilot-instructions.md  copilot-skill-yoloprouter.md
.github/workflows/: build.yml  ci.yml  release.yml  validate.yml
docs/: HTTP_HEADER_ERROR.md  TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-04-13-copilot-codex-model-list-refresh.md  2026-04-13-provider-model-browser.md  2026-04-15-provider-cooldown.md
src/: error.rs  lib.rs  main.rs  models.rs
src/analyzer/: mod.rs  multidimensional.rs
src/config/: mod.rs  parser.rs
src/provider/: anthropic.rs  codex.rs  codex_oauth.rs  cursor.rs  factory.rs  gemini.rs  generic.rs  github_copilot.rs  mod.rs  models.rs  openai.rs
src/router/: engine.rs  fallback.rs  health.rs  mod.rs
src/server/: handlers.rs  mod.rs
src/tui/: auth.rs  codex_auth.rs  config_editor.rs  cursor_auth.rs  github_auth.rs  mod.rs
src/utils/: mod.rs  stats.rs
tests/: integration_tests.rs
(+2 files in other folders)
