[package]
name = "yolo-router"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Streams
bytes = "1.8"
futures-util = "0.3"

# Authentication
oauth2 = "4.4"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID & hashing
uuid = { version = "1.6", features = ["v4", "serde"] }

# Env vars
dotenv = "0.15"

# Config directory resolution
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
